<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context="pl.mar_lew.quizapp.MainActivity">


    <LinearLayout
        style="@style/Quiz_headder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/Quiz_headder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/quiz_name" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/java_logo_100_100"/>

    </LinearLayout>

    <ScrollView
        style="@style/Quiz_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <LinearLayout
                style="@style/Answer_LinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/answer_1a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1a" />

                <CheckBox
                    android:id="@+id/answer_1b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1b" />

                <CheckBox
                    android:id="@+id/answer_1c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1c" />

                <CheckBox
                    android:id="@+id/answer_1d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1d" />

            </LinearLayout>

            <TextView
                style="@style/Question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2" />

            <LinearLayout
                style="@style/Answer_LinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/answer_2a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/answer_2eg"
                    android:inputType="text" />

            </LinearLayout>

            <TextView
                style="@style/Question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <LinearLayout
                style="@style/Answer_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/answer_3a"
                    style="@style/Answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/answer_3a"/>

                <CheckBox
                    android:id="@+id/answer_3b"
                    style="@style/Answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/answer_3b"/>

                <CheckBox
                    android:id="@+id/answer_3c"
                    style="@style/Answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/answer_3c"/>

                <CheckBox
                    android:id="@+id/answer_3d"
                    style="@style/Answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/answer_3d" />
            </LinearLayout>

            <TextView
                style="@style/Question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4" />

            <LinearLayout
                style="@style/Answer_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/answer_4a"
                        style="@style/Answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/answer_4a"/>

                    <CheckBox
                        android:id="@+id/answer_4b"
                        style="@style/Answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/answer_4b"/>

                    <CheckBox
                        android:id="@+id/answer_4c"
                        style="@style/Answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/answer_4c"/>

                    <CheckBox
                        android:id="@+id/answer_4d"
                        style="@style/Answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/answer_4d" />
            </LinearLayout>

            <TextView
                style="@style/Question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5" />

            <LinearLayout
                style="@style/Answer_LinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/answer_5_RadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/answer_5a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_5a" />

                    <RadioButton
                        android:id="@+id/answer_5b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_5b" />

                    <RadioButton
                        android:id="@+id/answer_5c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_5c" />

                    <RadioButton
                        android:id="@+id/answer_5d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_5d" />

                </RadioGroup>
            </LinearLayout>

            <TextView
                style="@style/Question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_6" />

            <LinearLayout
                style="@style/Answer_LinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/answer_6a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/answer_6eg"
                    android:inputType="number"
                    android:maxLength="2" />

            </LinearLayout>

            <TextView
                style="@style/Question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_7" />

            <LinearLayout
                style="@style/Answer_LinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/answer_7_RadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/answer_7a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_7a" />

                    <RadioButton
                    android:id="@+id/answer_7b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_7b" />

                    <RadioButton
                        android:id="@+id/answer_7c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_7c" />

                </RadioGroup>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="finish"
                android:text="@string/finish" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>